2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/pango-font.hh: HAVE_PANGO_FT2 iso. HAVE_PANGO_16

2006-02-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/test-file.cc: New file.

	* stepmake/stepmake/test-vars.make (TEST_MODULE_LIBES): Fixes for
	libraries.

	* flower/GNUmakefile (TEST_MODULE_LIBS): Link to flower lib.

2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/file-storage.hh: remove file.

	* lily/include/midi-item.hh (class Midi_track): idem.

	* lily/include/source.hh (class Sources): idem.

	* lily/include/performance.hh (class Performance): use vector
	iso. Cons<>

	* flower/include/cons.hh (class Cons): remove file.

	* flower/include/flower-proto.hh: remove template cruft.

	* lily/include/font-metric.hh: use size_t not vsize for indices.

	* flower/include/flower-proto.hh (Module): remove std-vector.hh
	from proto.

	* lily/include/all-font-metrics.hh: use HAVE_PANGO_FT2

	* lily/include/paper-book.hh (class Paper_book):
	make get_system_specs() public.

	* scm/layout-page-layout.scm (optimal-page-breaks): only consider
	the force=10000 case if we don't have a current-best. 

	* lily/tuplet-bracket.cc (get_bounds): don't do (size() - 1) for
	vsize 

	* flower/include/flower-proto.hh: remove outdated templates.

	* scm/page.scm: use annotate-spacing

2006-02-15  Graham Percival  <gpermus@gmail.com>

	* scm/translation-functions.scm: circle patch from Erlend, thanks!

	* THANKS: moved Erlend Aasland to contributors.

2006-02-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove HAVE_PANGO_16

	* lily/tuplet-bracket.cc (calc_positions): multiply with
	staff-space for beam case. This fixes tuplets+beams on scaled
	staves.

	* config.hh.in: remove all Kpathsea related defines.

	* lily/dot-column.cc (side_position): reach stem via dots->
	head->stem. Inspect all stems for dot collisions. 

	* lily/dot-column-engraver.cc (class Dot_column_engraver): excise
	stem handling.
