@@ -373,7 +373,7 @@ parse_symbol_list (char const *symbols)
   string s = symbols;
   replace_all (s, '\n', ' ');
   replace_all (s, '\t', ' ');
-  return ly_string_array_to_scm (split_string (s, ' '));
+  return ly_string_array_to_scm (string_split (s, ' '));
 }
 
 SCM
