@@ -1,3 +1,12 @@
+2006-02-16  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/include/std-vector.hh[!HAVE_STL_DATA_METHOD]: Add copy
+	constructor.
+
+	* lily/std-string.cc:
+	* lily/include/std-vector.hh (split_string): Move and rename from
+	lily/include/misc.hh, lily/misc.cc.  Update callers.
+
 2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/include/pango-font.hh: HAVE_PANGO_FT2 iso. HAVE_PANGO_16
